<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/ic_storefront_white_24dp"
        android:title="@string/menu_service" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_receipt_long_white_24dp"
        android:title="@string/menu_transaction" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_feed_white_24dp"
        android:title="@string/menu_news" />

    <item
        android:id="@+id/navigation_tips"
        android:icon="@drawable/ic_checklist_white_24dp"
        android:title="@string/menu_tips" />

    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/ic_help_center_white_24dp"
        android:title="@string/menu_guide" />

</menu>