<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_service_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/example_service_pic"
            android:contentDescription="@string/image_alt"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_additional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_additional">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_additional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="18sp"
        android:textColor="@color/blue_500"
        android:drawablePadding="10dp"
        app:drawableTint="@color/blue_500"
        app:drawableStartCompat="@drawable/ic_payments_black_24dp"
        android:text="@string/service_price" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_price"
        app:prefixText="Rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_price_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_price_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_price_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="18sp"
        android:textColor="@color/blue_500"
        android:drawablePadding="10dp"
        app:drawableTint="@color/blue_500"
        app:drawableStartCompat="@drawable/ic_place_black_24dp"
        android:text="@string/service_location"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_location_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_location_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_location_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_location_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_location_district">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_location_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_location_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_location_city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_location_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_location_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_location_province">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_location_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="18sp"
        android:textColor="@color/blue_500"
        android:drawablePadding="10dp"
        app:drawableTint="@color/blue_500"
        app:drawableStartCompat="@drawable/ic_schedule_black_24dp"
        android:text="@string/service_schedule"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_service_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:hint="@string/service_schedule">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_service_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pb_registration"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue_500" />

    <Button
        android:id="@+id/btn_service_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_rounded"
        android:text="@string/service_save"
        android:textAllCaps="false" />

</LinearLayout>