<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:layout_marginLeft="-14dp"
                android:layout_marginRight="-14dp"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:layout_marginLeft="-14dp"
                android:layout_marginRight="-14dp"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:layout_marginLeft="-14dp"
                android:layout_marginRight="-14dp"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:layout_marginLeft="-14dp"
                android:layout_marginRight="-14dp"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:passwordToggleEnabled="true"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_validation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:layout_marginLeft="-14dp"
                android:layout_marginRight="-14dp"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:hint="@string/password_validation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_validation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/pb_registration"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/blue_500" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:background="@drawable/button_rounded"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/already_registered" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
