<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.service.ServiceFragment">

    <LinearLayout
        android:id="@+id/action_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_service"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            app:icon="@drawable/ic_add_white_24dp"
            app:iconGravity="textStart"
            android:background="@drawable/button_rounded"
            android:text="@string/service_new"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_newest_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/services_newest" />

        <TextView
            android:id="@+id/tv_popular_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/services_popular" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/action_menu"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_service_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>