<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_transaction_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/transaction_confirmation" />

        <Button
            android:id="@+id/btn_transaction_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_transaction_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_confirmation"
            android:background="@drawable/button_rounded"
            android:text="@string/transaction_confirmation_accept" />

        <Button
            android:id="@+id/btn_transaction_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btn_transaction_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_confirmation"
            android:background="@drawable/button_rounded"
            android:text="@string/transaction_confirmation_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>